@@ -994,7 +994,7 @@ edit_app_dialog (GsmPropertiesDialog *dialog,
                         msgbox = gtk_message_dialog_new (GTK_WINDOW (dlg),
                                                          GTK_DIALOG_MODAL,
                                                          GTK_MESSAGE_ERROR,
-                                                         GTK_BUTTONS_OK,
+                                                         GTK_BUTTONS_CLOSE,
                                                          "%s", error_msg);
 
                         if (error != NULL) {
