@@ -1,3 +1,10 @@
+2009-02-26  Vincent Untz  <vuntz@gnome.org>
+
+	* capplet/gsm-properties-dialog.c: (edit_app_dialog):
+	* tools/gnome-session-save.c: (display_error): use a Close button
+	instead of an Ok button in error dialogs. If considered an UI change,
+	then it's trivial and it doesn't affect documentation.
+
 2009-02-25  Paolo Borelli  <pborelli@katamail.com>
 
 	* gnome-session/gsm-client.c:
